--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,4 @@ OPENAI_API_KEY=your-openai-api-key
 
 # Server Configuration
 PORT=3001
+ALLOWED_ORIGINS=http://localhost:3000,https://your-frontend-url.vercel.app
