Fix cross-domain session/cookie issues for production deployment
- Add session cookie cache configuration to better-auth
- Enable cross-subdomain cookies with secure cookies in production
- Add credentials: include to frontend auth client
- Update ALLOWED_ORIGINS to include Vercel frontend
- Configure production URLs in .env files

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ DATABASE_URL=postgresql://user:password@host/database?sslmode=require
 # Better-auth Configuration
 BETTER_AUTH_SECRET=your-secret-key-here
 BETTER_AUTH_URL=http://localhost:3001
+BETTER_AUTH_CLIENT_URL=http://localhost:3000
 
 # Redis Configuration (Upstash)
 UPSTASH_REDIS_REST_URL=https://your-redis-url.upstash.io
@@ -19,4 +20,7 @@ OPENAI_API_KEY=your-openai-api-key
 
 # Server Configuration
 PORT=3001
+NODE_ENV=development
+
+# CORS Configuration
 ALLOWED_ORIGINS=http://localhost:3000,https://your-frontend-url.vercel.app
