fix(auth): Improve cross-subdomain authentication configuration
- Update deployment documentation to require `appacheur.com` subdomains
- Add detailed requirements for cross-domain cookie authentication
- Modify `.env.example` to clarify production subdomain configuration
- Update README with important cross-subdomain authentication notes
- Add new documentation files explaining subdomain and cookie requirements
- Enhance deployment checklist with cross-subdomain authentication guidelines
- Improve authentication security documentation
- Clarify environment variable settings for production deployments
Ensures robust cross-subdomain authentication by enforcing strict domain requirements and providing comprehensive documentation for secure production deployments.

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,9 @@ DATABASE_URL=postgresql://user:password@host/database?sslmode=require
 # Better-auth Configuration
 BETTER_AUTH_SECRET=your-secret-key-here
 BETTER_AUTH_URL=http://localhost:3001
+# Production: Use subdomain of appacheur.com (e.g., https://api.appacheur.com)
 BETTER_AUTH_CLIENT_URL=http://localhost:3000
+# Production: Use subdomain of appacheur.com (e.g., https://app.appacheur.com)
 
 # Redis Configuration (Upstash)
 UPSTASH_REDIS_REST_URL=https://your-redis-url.upstash.io
@@ -23,4 +25,6 @@ PORT=3001
 NODE_ENV=development
 
 # CORS Configuration
-ALLOWED_ORIGINS=http://localhost:3000,https://your-frontend-url.vercel.app
+ALLOWED_ORIGINS=http://localhost:3000
+# Production: Add additional trusted origins (comma-separated)
+# Note: BETTER_AUTH_CLIENT_URL is automatically trusted
