fix(websocket): Resolve WebSocket connection issues in production
- Add `FRONTEND_URL` environment variable for WebSocket CORS configuration
- Update deployment documentation to include WebSocket-specific environment variables
- Create `WEBSOCKET_FIX.md` with detailed troubleshooting guide
- Modify `.env.example` to document `FRONTEND_URL` requirement
- Update README.md with WebSocket connection troubleshooting steps
- Ensure consistent environment variable naming across frontend and backend
Fixes connection issues caused by missing WebSocket-specific configuration in production environments

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,7 @@ NODE_ENV=development
 ALLOWED_ORIGINS=http://localhost:3000
 # Production: Add additional trusted origins (comma-separated)
 # Note: BETTER_AUTH_CLIENT_URL is automatically trusted
+
+# Frontend URL for WebSocket CORS
+FRONTEND_URL=http://localhost:3000
+# Production: Use your frontend URL (e.g., https://app.appacheur.com)
